@@ -16,14 +16,15 @@ namespace mesmer
     std::string bathGasName;
 
     // granularity of the system
-    int    GrainSize;                     // Grain size in cm-1
-    int    MaxGrn;                        // The number of grains
-    int    MaxCell;                       // The number of cells
-    double MaximumTemperature;            // Maximum temperature for the purposes of setting the energy range
-    double EMin, EMax;                    // The absolute lowest and highest energies in the system, cm-1
-    double EAboveHill;                    // Max energy above the highest Hill [in kT]
-    bool   useBasisSetMethod;             // Use the contracted basis set method.
-    size_t nBasisSet;                     // Number of basis set functions to use.
+    size_t GrainSize;           // Grain size in cm-1
+    size_t CellSize;            // Cell size in cm-1
+    size_t MaxGrn;              // The number of grains
+    size_t MaxCell;             // The number of cells
+    double MaximumTemperature;  // Maximum temperature for the purposes of setting the energy range
+    double EMin, EMax;          // The absolute lowest and highest energies in the system, cm-1
+    double EAboveHill;          // Max energy above the highest Hill [in kT]
+    bool   useBasisSetMethod;   // Use the contracted basis set method.
+    size_t nBasisSet;           // Number of basis set functions to use.
   };
 
 }//namespace
