@@ -9,7 +9,7 @@ namespace mesmer
   public:
 
     // Function to define particular counts of the DOS of a molecule.
-    virtual bool countCellDOS(gDensityOfStates* mol, size_t MaximumCell);
+    virtual bool countCellDOS(gDensityOfStates* mol,  const MesmerEnv& env);
 
     // Function to calculate contribution to canonical partition function.
     virtual double canPrtnFnCntrb(gDensityOfStates* gdos, double beta) ;
@@ -40,8 +40,10 @@ namespace mesmer
 
 
   // Provide a function to define particular counts of the DOS of a molecule.
-  bool ClassicalRotor::countCellDOS(gDensityOfStates* pDOS, size_t MaximumCell)
+  bool ClassicalRotor::countCellDOS(gDensityOfStates* pDOS, const MesmerEnv& env)
   {
+	const size_t MaximumCell = env.MaxCell ;
+
     vector<double> cellEne;
     getCellEnergies(MaximumCell, cellEne);
     vector<double> cellDOS(MaximumCell, 0.0) ;
