@@ -26,7 +26,7 @@ namespace mesmer
     virtual bool ReadParameters(gDensityOfStates* gdos, PersistPtr ppDOSC=NULL);
 
     // Provide a function to define particular counts of the DOS of a molecule.
-    virtual bool countCellDOS(gDensityOfStates* mol, size_t MaximumCell);
+    virtual bool countCellDOS(gDensityOfStates* mol, const MesmerEnv& env);
 
     // Provide a function to calculate contribution to canonical partition function.
     virtual double canPrtnFnCntrb(gDensityOfStates* gdos, double beta) ;
@@ -206,8 +206,10 @@ namespace mesmer
   // Calculate classical mechanical 1D rotor densities of states of a free 
   // rotor and convolve them with the main density of states.
   //
-  bool HinderedRotorCM1D::countCellDOS(gDensityOfStates* pDOS, size_t MaximumCell)
+  bool HinderedRotorCM1D::countCellDOS(gDensityOfStates* pDOS, const MesmerEnv& env)
   {
+	const size_t MaximumCell = env.MaxCell ;
+
     vector<double> cellDOS;
     if(!pDOS->getCellDensityOfStates(cellDOS, 0, false)) // retrieve the DOS vector without recalculating
       return false;
