@@ -24,7 +24,7 @@ namespace mesmer
     virtual bool ReadParameters(gDensityOfStates* gdos, PersistPtr ppDOSC=NULL);
 
     // Function to define particular counts of the DOS of a molecule.
-    virtual bool countCellDOS(gDensityOfStates* mol, size_t MaximumCell);
+    virtual bool countCellDOS(gDensityOfStates* mol, const MesmerEnv& env);
 
     // Function to calculate contribution to canonical partition function.
     virtual double canPrtnFnCntrb(gDensityOfStates* gdos, double beta) ;
@@ -84,8 +84,10 @@ namespace mesmer
   }
 
   // Provide a function to define particular counts of the DOS of a molecule.
-  bool Morse::countCellDOS(gDensityOfStates* pDOS, size_t MaximumCell)
+  bool Morse::countCellDOS(gDensityOfStates* pDOS, const MesmerEnv& env)
   {
+	const size_t MaximumCell = env.MaxCell ;
+
     vector<double> cellDOS;
     if(!pDOS->getCellDensityOfStates(cellDOS, 0, false)) // retrieve the DOS vector without recalculating
       return false;
