@@ -540,11 +540,13 @@ namespace mesmer
     // Calculate vibrational densities of states.
 
     size_t MaximumCell(50000) ;
+	MesmerEnv &env = const_cast<MesmerEnv &>(pMol->getEnv()) ;
+	env.MaxCell = MaximumCell ;
     vector<double> cellDOS(MaximumCell, 0.0) ;
     cellDOS[0] = 1.0 ;
     pMol->getDOS().setCellDensityOfStates(cellDOS) ; 
 
-    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), MaximumCell) ;
+    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), pMol->getEnv()) ;
 
     // Retrieve the DOS vector without recalculating.
 
@@ -573,6 +575,8 @@ namespace mesmer
     underlineText(string("MEIC Test: \"") + pMol->getName() + string("\" Anharmonic oscillators only.") ) ;
 
     size_t MaximumCell(50000) ;
+	MesmerEnv &env = const_cast<MesmerEnv &>(pMol->getEnv()) ;
+	env.MaxCell = MaximumCell ;
     vector<double> cellDOS(MaximumCell, 0.0) ;
     cellDOS[0] = 1.0 ;
     pMol->getDOS().setCellDensityOfStates(cellDOS) ;
@@ -582,7 +586,7 @@ namespace mesmer
     if(!pDOSCalculator)
       return false;
 
-    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), MaximumCell) ;
+    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), pMol->getEnv()) ;
 
     // Retrieve the DOS vector without recalculating.
 
@@ -604,10 +608,12 @@ namespace mesmer
     // Calculate rotational densities of states.
 
     size_t MaximumCell(50000) ;
+	MesmerEnv &env = const_cast<MesmerEnv &>(pMol->getEnv()) ;
+	env.MaxCell = MaximumCell ;
     vector<double> cellDOS(MaximumCell, 0.0) ;
     pMol->getDOS().setCellDensityOfStates(cellDOS) ;
 
-    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), MaximumCell) ;
+    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), pMol->getEnv()) ;
 
     // Retrieve the DOS vector without recalculating.
 
@@ -629,6 +635,8 @@ namespace mesmer
     // Calculate internal rotational densities of states.
 
     size_t MaximumCell(100000) ;
+	MesmerEnv &env = const_cast<MesmerEnv &>(pMol->getEnv()) ;
+	env.MaxCell = MaximumCell ;
     vector<double> cellDOS(MaximumCell, 0.0) ;
 	cellDOS[0] = 1.0 ;
     pMol->getDOS().setCellDensityOfStates(cellDOS) ;
@@ -636,7 +644,7 @@ namespace mesmer
     PersistPtr ppMol = pMol->get_PersistentPointer() ;
 	ppMol = ppMol->XmlMoveTo("me:ExtraDOSCMethod") ;
     status = status && pDOSCalculator->ReadParameters(&(pMol->getDOS()), ppMol) ;
-    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), MaximumCell) ;
+    status = status && pDOSCalculator->countCellDOS(&(pMol->getDOS()), pMol->getEnv()) ;
 
     return status ;
 
